Fix: ui alignment issue

--- a/themes/saudi-re-theme/login/resources/css/login.css
+++ b/themes/saudi-re-theme/login/resources/css/login.css
@@ -32,7 +32,7 @@ body, html {
   justify-content: center;
   align-items: center;
   z-index: 2;
-  margin-top: 50px;
+  margin-top: 100px;
 }
 
 .logo img {
@@ -139,7 +139,7 @@ input {
 /* Right Section: Background Image */
 .image-section {
   position: absolute;
-  right: -120px;
+  /* right: 0; */
   top: 0;
   height: 100%;
   background-size: cover;
@@ -250,9 +250,6 @@ input {
     width: 70%;
   }
 
-  .image-section {
-    display: none; /* Hide background image on smaller screens */
-  }
 }
 
 @media screen and (max-width: 768px) {
